Fix few pep8 errors, also fix On mobile devices if you are logged in as an admin user clicking on product management brings you to the logout screen.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -201,11 +201,11 @@ input[name='q']::placeholder {
     justify-content: center;
 }
 
-.trust-company-top {
+/* .trust-company-top {
     display: none;
     width: 150px !important;
     margin: 0 auto;
-}
+} */
 
 #footer .copyright {
     padding: 5px;
